test: Add integration tests structure (TASK-002 partial)
- Created tests/integration/ directory structure
- Added conftest.py with shared fixtures
- Added test_framework_dashboard.py
- Added test_data_flow.py
- Added test_concurrent.py
- Added test_e2e_flows.py
- Added README with test documentation

Note: Tests need implementation completion

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,6 +91,12 @@ markers = [
     "parallel_safe: marks tests as safe for parallel execution",
     "serial: marks tests to run serially (not in parallel)",
     "isolated: marks tests that require complete isolation",
+    "database: marks tests as requiring database",
+    "redis: marks tests as requiring Redis",
+    "websocket: marks tests as requiring WebSocket",
+    "concurrent: marks tests as testing concurrent operations",
+    "framework: marks tests as framework-related",
+    "dashboard: marks tests as dashboard-related",
 ]
 asyncio_mode = "auto"
 
