--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ pytest==7.4.4
 pytest-asyncio==0.23.3
 pytest-xdist==3.5.0
 pytest-cov==4.1.0
-pytest-allure==2.13.8
+allure-pytest==2.13.5  # Fixed: correct package name
 pytest-html==4.1.1
 
 # HTTP Clients
