--- a/requirements.txt
+++ b/requirements.txt
@@ -48,3 +48,10 @@ isort==5.13.2
 types-PyYAML==6.0.12.12
 types-requests==2.31.0.20240106
 types-urllib3==1.26.25.14
+
+# Health Checks & Monitoring
+asyncpg==0.29.0          # PostgreSQL async driver
+aiomysql==0.2.0          # MySQL async driver
+aiosqlite==0.19.0        # SQLite async driver
+redis==5.0.1             # Redis client
+psutil==5.9.8            # System monitoring
