fix: Resolve dependency conflicts and Docker build issues
- Fix duplicate allure-pytest version in requirements.txt
- Update Dockerfile to use libgl1 instead of deprecated libgl1-mesa-glx

This resolves GitHub Actions failures.

--- a/requirements.txt
+++ b/requirements.txt
@@ -26,9 +26,8 @@ pyyaml==6.0.1
 python-dotenv==1.0.0
 pydantic-extra-types==2.6.0
 
-# Reporting
-allure-pytest==2.13.2
-allure-python-commons==2.13.2
+# Reporting (allure-pytest already listed above)
+allure-python-commons==2.13.5
 
 # Performance Testing
 locust==2.22.0
