--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,41 +30,43 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: Cache pip packages
+      - name: Install Poetry
+        uses: abatilo/actions-poetry@v2
+        with:
+          poetry-version: ${{ env.POETRY_VERSION }}
+
+      - name: Cache Poetry packages
         uses: actions/cache@v4
         with:
-          path: ~/.cache/pip
-          key: ${{ env.CACHE_VERSION }}-${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
+          path: ~/.cache/pypoetry
+          key: ${{ env.CACHE_VERSION }}-${{ runner.os }}-poetry-${{ hashFiles('**/pyproject.toml') }}
           restore-keys: |
-            ${{ env.CACHE_VERSION }}-${{ runner.os }}-pip-
+            ${{ env.CACHE_VERSION }}-${{ runner.os }}-poetry-
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install black ruff mypy bandit safety
+        run: poetry install --no-interaction --no-root
 
       - name: Run Black (formatting check)
-        run: black --check --diff --line-length 100 src tests
+        run: poetry run black --check --diff --line-length 100 src tests
         continue-on-error: true
 
       - name: Run Ruff (linting)
-        run: ruff check src tests --output-format=github
+        run: poetry run ruff check src tests --output-format=github
         continue-on-error: true
 
       - name: Run isort (import sorting check)
-        run: isort --check-only --diff src tests
+        run: poetry run isort --check-only --diff src tests
         continue-on-error: true
 
       - name: Run MyPy (type checking)
-        run: mypy src --strict --ignore-missing-imports --show-error-codes
+        run: poetry run mypy src --strict --ignore-missing-imports --show-error-codes
         continue-on-error: true
 
       - name: Run Bandit (security linting)
-        run: bandit -r src -f json -o bandit-report.json || true
+        run: poetry run bandit -r src -f json -o bandit-report.json || true
 
       - name: Run Safety (dependency vulnerability check)
-        run: safety check --json --output safety-report.json || true
+        run: poetry run safety check --json --output safety-report.json || true
 
       - name: Upload security reports
         uses: actions/upload-artifact@v4
@@ -108,7 +110,7 @@ jobs:
 
       - name: Run unit tests
         run: |
-          pytest tests/unit -v \
+          poetry run pytest tests/unit -v \
             -m "not integration and not e2e and not performance and not security" \
             --cov=src \
             --cov-report=xml \
