--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,118 +1,79 @@
-[project]
+[tool.poetry]
 name = "qa-framework"
 version = "1.0.0"
-description = "Modern QA Automation Framework with Clean Architecture and SOLID Principles"
-authors = [{name = "Alfred", email = "alfred@example.com"}]
-license = {text = "MIT"}
-requires-python = ">=3.12"
+description = "Modern QA Automation Framework with Clean Architecture"
+authors = ["Joker <joker@example.com>"]
 readme = "README.md"
-keywords = ["qa", "testing", "automation", "framework", "pytest"]
+packages = [{include = "src"}]
 
-dependencies = [
-    "pytest>=7.4.0",
-    "pytest-asyncio>=0.23.0",
-    "pytest-xdist>=3.5.0",
-    "pytest-cov>=4.1.0",
-    "httpx>=0.26.0",
-    "requests>=2.31.0",
-    "playwright>=1.41.0",
-    "pydantic>=2.6.0",
-    "pyyaml>=6.0.0",
-    "allure-pytest>=2.13.0",
-    "faker>=23.0.0",
-]
+[tool.poetry.dependencies]
+python = "^3.11"
+pytest = "7.4.4"
+pytest-asyncio = "0.23.3"
+pytest-xdist = "3.5.0"
+pytest-cov = "4.1.0"
+allure-pytest = "2.13.5"
+pytest-html = "4.1.1"
+httpx = "0.26.0"
+requests = "2.31.0"
+playwright = "1.41.0"
+selenium = "4.16.0"
+faker = "23.2.0"
+factory-boy = "3.3.0"
+pydantic = "2.6.1"
+pydantic-settings = "2.1.0"
+pyyaml = "6.0.1"
+python-dotenv = "1.0.0"
+pydantic-extra-types = "2.6.0"
+locust = "2.22.0"
+bandit = "1.7.6"
+safety = ">=3.0.0"
+asyncpg = "0.29.0"
+aiomysql = "0.2.0"
+aiosqlite = "0.19.0"
+redis = "5.0.1"
+psutil = "5.9.8"
 
-[project.optional-dependencies]
-dev = ["black>=24.1.0", "ruff>=0.2.0", "mypy>=1.8.0", "pre-commit>=3.6.0"]
-ui = ["selenium>=4.16.0"]
-performance = ["locust>=2.22.0"]
-security = ["bandit>=1.7.0", "safety>=3.0.0"]
+[tool.poetry.group.dev.dependencies]
+black = "24.1.1"
+ruff = "0.2.1"
+mypy = "1.8.0"
+pre-commit = "3.6.0"
+isort = "5.13.2"
+types-PyYAML = "6.0.12.12"
+types-requests = "2.31.0.20240106"
+types-urllib3 = "1.26.25.14"
+mkdocs = "^1.5.0"
+mkdocs-material = "^9.5.0"
+mkdocstrings = {extras = ["python"], version = "^0.24.0"}
 
-[project.scripts]
-qa-framework = "src.core.cli:main"
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 100
-target-version = ['py312']
-include = '\.pyi?$'
-extend-exclude = '''
-/(
-  # directories
-  \.eggs
-  | \.git
-  | \.hg
-  | \.mypy_cache
-  | \.tox
-  | \.venv
-  | build
-  | dist
-)/
-'''
+target-version = ['py311']
 
 [tool.ruff]
 line-length = 100
-target-version = "py312"
-select = ["E", "F", "I", "N", "W"]
-ignore = ["E501"]
-
-[tool.ruff.format]
-indent-style = "space"
-quote-style = "double"
+target-version = "py311"
 
 [tool.mypy]
-python_version = "3.12"
-warn_return_any = true
-warn_unused_configs = true
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
-check_untyped_defs = true
-no_implicit_optional = true
-warn_redundant_casts = true
-warn_unused_ignores = true
-warn_no_return = true
-strict_equality = true
+python_version = "3.11"
+strict = true
+ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
-python_files = ["test_*.py"]
+python_files = ["test_*.py", "*_test.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
-addopts = [
-    "-v",
-    "--strict-markers",
-    "--tb=short",
-]
+addopts = "-v --tb=short"
 markers = [
-    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
-    "integration: marks tests as integration tests",
-    "e2e: marks tests as end-to-end tests",
-    "api: marks tests as API tests",
-    "ui: marks tests as UI tests",
-    "parallel_safe: marks tests as safe for parallel execution",
-    "serial: marks tests to run serially (not in parallel)",
-    "isolated: marks tests that require complete isolation",
-    "database: marks tests as requiring database",
-    "redis: marks tests as requiring Redis",
-    "websocket: marks tests as requiring WebSocket",
-    "concurrent: marks tests as testing concurrent operations",
-    "framework: marks tests as framework-related",
-    "dashboard: marks tests as dashboard-related",
-]
-asyncio_mode = "auto"
-
-[tool.coverage.run]
-source = ["src"]
-omit = ["*/tests/*", "*/__pycache__/*"]
-
-[tool.coverage.report]
-precision = 2
-show_missing = true
-skip_covered = false
-exclude_lines = [
-    "pragma: no cover",
-    "def __repr__",
-    "raise AssertionError",
-    "raise NotImplementedError",
-    "if __name__ == .__main__.:",
-    "if TYPE_CHECKING:",
+    "unit: Unit tests",
+    "integration: Integration tests",
+    "e2e: End-to-end tests",
+    "performance: Performance tests",
+    "security: Security tests",
 ]
