--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ pydantic-extra-types = "2.6.0"
 locust = "2.22.0"
 bandit = "1.7.6"
 safety = ">=3.0.0"
+sqlalchemy = "^2.0"
 asyncpg = "0.29.0"
 aiomysql = "0.2.0"
 aiosqlite = "0.19.0"
