fix: Correct --headed flag to --headless for E2E tests
- Fix pytest-playwright syntax error: --headed=false is invalid
- Change to --headless (correct flag for headless mode)
- This follows the principle of fixing errors instead of hiding them
- E2E tests should now run properly without syntax errors

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -262,7 +262,7 @@ jobs:
           pytest tests/e2e -v \
             -m e2e \
             --browser chromium \
-            --headed=false \
+            --headless \
             --junitxml=junit-e2e.xml
 
       - name: Upload E2E test results
