fix: Correct E2E tests path and coverage issues
- Fix E2E tests path: tests/e2e is empty, tests are in tests/integration
- Remove incorrect --browser and --headless flags (not needed for pytest)
- Use poetry run for consistency
- Fix coverage analysis to use poetry run coverage
- Follows principle of fixing root causes, not hiding errors

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -259,10 +259,11 @@ jobs:
 
       - name: Run E2E tests
         run: |
-          pytest tests/e2e -v \
+          poetry run pytest tests/integration -v \
             -m e2e \
-            --browser chromium \
-            --headless \
+            --cov=src \
+            --cov-append \
+            --cov-report=xml \
             --junitxml=junit-e2e.xml
 
       - name: Upload E2E test results
