--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -259,11 +259,8 @@ jobs:
 
       - name: Run E2E tests
         run: |
-          poetry run pytest tests/integration -v \
+          pytest tests/integration -v \
             -m e2e \
-            --cov=src \
-            --cov-append \
-            --cov-report=xml \
             --junitxml=junit-e2e.xml
 
       - name: Upload E2E test results
@@ -392,13 +389,7 @@ jobs:
       - name: Install coverage tools
         run: |
           python -m pip install --upgrade pip
-          pip install coverage codecov
-
-      - name: Combine coverage reports
-        run: |
-          coverage combine --keep coverage.xml || true
-          coverage html -d coverage-report
-          coverage report --fail-under=80 || true
+          pip install codecov
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
