fix: Resolve CI/CD pipeline failures
- Add missing dependencies to requirements.txt (sqlalchemy, alembic)
- Fix linting errors:
  - Remove unused tempfile import in migration_tester.py
  - Remove unused imports in database_client.py (ISQLValidator, SQLValidationResult, MigrationResult)
  - Fix unused variable in data_integrity_tester.py
  - Remove unused imports in contract_validator.py (re, urlparse, parse_qs)
- Make Slack notification non-blocking when webhook not configured

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -577,6 +577,7 @@ jobs:
       - name: Notify Slack on Success
         if: success() && github.ref == 'refs/heads/main'
         uses: slackapi/slack-github-action@v1
+        continue-on-error: true
         with:
           payload: |
             {
