feat: Add resource limits, Prometheus monitoring and alerting configuration
- Add CPU/memory limits and reservations to docker-compose.railway.yml
- Create production Prometheus config with scrape targets
- Add Alertmanager config with routing rules
- Define alert rules for:
  - Service health (ServiceDown, HighMemory, HighCPU)
  - Application performance (HighErrorRate >5%, HighLatency >500ms)
  - QA Framework specific (TestFailureRate, Coverage, StaleResults)
  - Infrastructure (Redis, PostgreSQL, DiskSpace)

Ref: Sprint 1.2 - Infrastructure Setup (PENDING_TASKS.md)

--- a/dashboard/docker-compose.railway.yml
+++ b/dashboard/docker-compose.railway.yml
@@ -46,12 +46,22 @@ services:
       retries: 3
       start_period: 10s
 
-    # Railway handles resource limits
-    # deploy:
-    #   resources:
-    #     limits:
-    #       cpus: '1'
-    #       memory: 512M
+    # Resource Limits (Kubernetes/Docker Swarm compatible)
+    deploy:
+      resources:
+        limits:
+          cpus: '2'
+          memory: 1G
+        reservations:
+          cpus: '0.5'
+          memory: 256M
+
+    # Logging configuration
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # ========================================
   # Background Worker (for async tasks)
@@ -69,6 +79,22 @@ services:
       - ENVIRONMENT=production
     depends_on:
       - backend
+
+    # Resource Limits for Worker
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 128M
+
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # ========================================
   # Redis (if not using Railway Redis)
