--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # QA-FRAMEWORK - Dependencies
+
 # Core Testing Framework
 pytest==7.4.4
 pytest-asyncio==0.23.3
@@ -50,12 +51,15 @@ types-requests==2.31.0.20240106
 types-urllib3==1.26.25.14
 
 # Health Checks & Monitoring
-asyncpg==0.29.0          # PostgreSQL async driver
-aiomysql==0.2.0          # MySQL async driver
-aiosqlite==0.19.0        # SQLite async driver
-redis==5.0.1             # Redis client
-psutil==5.9.8            # System monitoring
+asyncpg==0.29.0  # PostgreSQL async driver
+aiomysql==0.2.0  # MySQL async driver
+aiosqlite==0.19.0  # SQLite async driver
+redis==5.0.1  # Redis client
+psutil==5.9.8  # System monitoring
 
 # Database ORM & Migration
-sqlalchemy==2.0.25       # ORM for database operations
-alembic==1.13.1          # Database migrations
+sqlalchemy==2.0.25  # ORM for database operations
+alembic==1.13.1  # Database migrations
+
+# Payment Processing
+stripe==8.4.0  # Stripe Python SDK
