fix(deps): correct corrupted requirements.txt - stripe was merged with locust

--- a/dashboard/backend/requirements.txt
+++ b/dashboard/backend/requirements.txt
@@ -25,4 +25,5 @@ allure-pytest==2.13.5
 psycopg2-binary==2.9.10
 python-dotenv==1.0.1
 structlog==24.4.0
-locust==2.20.0stripe
+locust==2.20.0
+stripe==10.12.0
